# caryaar_hr_ext

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
caryaar_hr_ext/: api.py  hooks.py  modules.txt  patches.txt
caryaar_hr_ext/public/js/: hrms_handbook_tile.js
deploy/notification-relay/: README.md  config.example.json  docker-compose.yml
